# libra-code

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALLATION.md  Installation.docx  Kosar_generalize_Energy+DOS+UV-VIS.py  NEW_INSTRUCTIONS.md  README.md  RESOURCES.md  appveyor.yml  genindex.html  index.html  libra_env_build.sh  new.md  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
src/: CMakeLists.txt  Code.ppt  Dependencies.doc  Doxyfile  NOTES.txt  Units.h  __init__.py  liblibra_core.cpp  liblibra_core.h  pch.h  realtype.h
src/DataBase/: __init__.py
src/ann/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork_Algorithms.cpp  NeuralNetwork_DataProcessing.cpp  libann.cpp  libann.h
src/atomistic/: CMakeLists.txt  atomistic.cpp  atomistic.h  libatomistic.cpp  libatomistic.h
src/basis/: Basis.cpp  Basis.h  Basis_map.cpp  Basis_nac.cpp  Basis_ovlp.cpp  CMakeLists.txt  basisset.cpp  basisset.h  libbasis.cpp  libbasis.h
src/basis_setups/: Basis_STO_3G_DZ.cpp  Basis_Setups.h  CMakeLists.txt  libbasis_setups.cpp  libbasis_setups.h
src/calculators/: Annihilate.cpp  Annihilate.h  Bands.cpp  Bands.h  CMakeLists.txt  Density_Matrix.cpp  Density_Matrix.h  Energy.cpp  Energy.h  Energy_Electronic.cpp  Energy_Electronic.h  Energy_Nuclear.cpp  Energy_Nuclear.h  Excitations.cpp  Excitations.h  FOE  Fermi.cpp  Fermi.h  Mulliken.cpp  Mulliken.h  NOTES.txt  NPI.cpp  NPI.h  libcalculators.cpp  libcalculators.h
src/cell/: CMakeLists.txt  Cell.cpp  Cell.h  NList.cpp  NList.h  libcell.cpp  libcell.h
src/chemobjects/: CMakeLists.txt  libchemobjects.cpp  libchemobjects.h
src/common_types/: CMakeLists.txt  Excitation.cpp  Excitation.h  libcommon_types.cpp  libcommon_types.h
src/context/: CMakeLists.txt  Context.cpp  Context.h  NOTES.txt  ctx_Control_Parameters.cpp  ctx_Control_Parameters.h  libcontext.cpp  libcontext.h
src/control_parameters/: CMakeLists.txt  Control_Parameters.cpp  Control_Parameters.h  libcontrol_parameters.cpp  libcontrol_parameters.h
src/converters/: CMakeLists.txt  converters.cpp  converters.h  libconverters.cpp  libconverters.h
src/dyn/: CMakeLists.txt  Dynamics.cpp  Dynamics.h  Dynamics_Ensemble.cpp  Dynamics_Ensemble.h  Dynamics_Nuclear.cpp  Dynamics_Nuclear.h  Ehrenfest.cpp  Ehrenfest.h  Energy_and_Forces.cpp  Energy_and_Forces.h  Surface_Hopping.cpp  Surface_Hopping.h  Surface_Hopping_method1.cpp  Surface_Hopping_method1.h  Verlet.cpp  Verlet_nvt.cpp  dyn_control_params.cpp  dyn_control_params.h  dyn_decoherence.h  dyn_decoherence_methods.cpp  dyn_decoherence_time.cpp  dyn_ham.cpp  dyn_ham.h  dyn_hop_acceptance.cpp  dyn_hop_acceptance.h  dyn_hop_proposal.cpp  dyn_hop_proposal.h  dyn_hop_proposal_fssh3.cpp  dyn_methods.h  dyn_methods_dish.cpp  dyn_methods_qtsh.cpp  dyn_projectors.cpp  dyn_projectors.h  dyn_variables.cpp  dyn_variables.h  dyn_variables_electronic.cpp  dyn_variables_nuclear.cpp  libdyn.cpp  libdyn.h  (+21 more)
src/dyn_rigidbody/: CMakeLists.txt  RigidBody.cpp  RigidBody.docx  RigidBody.h  RigidBody_methods.cpp  RigidBody_methods1.cpp  RigidBody_methods2.cpp  RigidBody_methods3.cpp  RigidBody_methods4.cpp  RigidBody_methods5_1.cpp  RigidBody_methods5_2.cpp  RigidBody_methods5_3.cpp  RigidBody_methods5_4.cpp  RigidBody_methods5_5.cpp  RigidBody_methods5_6.cpp  librigidbody.cpp  librigidbody.h
src/fgr/: CMakeLists.txt  fgr.cpp  fgr.h  fgr_normal_modes.cpp  libfgr.cpp  libfgr.h  math.docx
src/forcefield/: Angle_Record.cpp  Angle_Record.h  Atom_Record.cpp  Atom_Record.h  Bond_Record.cpp  Bond_Record.h  CMakeLists.txt  Dihedral_Record.cpp  Dihedral_Record.h  ForceField.cpp  ForceField.h  ForceField_methods.cpp  ForceField_methods1.cpp  ForceField_methods10.cpp  ForceField_methods2.cpp  ForceField_methods3.cpp  ForceField_methods4.cpp  ForceField_methods5.cpp  ForceField_methods6.cpp  ForceField_methods7.cpp  ForceField_methods8.cpp  ForceField_methods9.cpp  Fragment_Record.cpp  Fragment_Record.h  dreiding_types.cpp  gaff_types.cpp  libforcefield.cpp  libforcefield.h  mmff94_types.cpp  tip3p_types.cpp  tripos_types.cpp  uff_types.cpp
src/hamiltonian/: CMakeLists.txt  Hamiltonian.cpp  Hamiltonian.h  Hamiltonian_Model.cpp  Hamiltonian_Model.h  Model_DAC.cpp  Model_DAC.h  Model_ECWR.cpp  Model_ECWR.h  Model_Marcus.cpp  Model_Marcus.h  Model_Rabi2.cpp  Model_Rabi2.h  Model_SAC.cpp  Model_SAC.h  Model_SEXCH.cpp  Model_SEXCH.h  libhamiltonian.cpp  libhamiltonian.h
src/integrators/: CMakeLists.txt  integrators.cpp  integrators.h  libintegrators.cpp  libintegrators.h
src/io/: CMakeLists.txt  io.cpp  io.h  libio.cpp  libio.h  old
src/ivr/: CMakeLists.txt  ivr.cpp  ivr.h  ivr_matrix_elements.cpp  ivr_prefactors.cpp  ivr_propagators.cpp  ivr_sampling.cpp  ivr_timecorr.cpp  libivr.cpp  libivr.h
src/libint2_wrappers/: .libint2_wrappers.cpp.swp  CMakeLists.txt  aux_functs  libint2_wrappers.cpp  libint2_wrappers.h  liblibint2_wrappers.cpp  liblibint2_wrappers.h
src/libra_params/: __init__.py  eht.py
src/libra_py/: CP2K_methods.py  DFTB_methods.py  ERGO_methods.py  Energy_DOS_UVVis_BLLZ.py  Gaussian_methods.py  LAMMPS_methods.py  LoadGAFF.py  LoadMMFF94.py  LoadMolecule.py  LoadPT.py  LoadTRIPOS.py  LoadUFF.py  QE_methods.py  QE_utils.py  README.md  __init__.py  acf.py  acf_matrix.py  acf_theory.docx  acf_vector.py  autoconnect.py  auxiliary_functions.py  build.py  capping.py  common_utils.py  cube_file_methods.py  cube_file_process.py  data_conv.py  data_io.py  data_outs.py  data_read.py  data_savers.py  data_stat.py  data_visualize.py  datautils.py  dynamics.py  dynamics_exact.py  dynamics_hdf5.py  dynamics_io.py  dynamics_plotting.py  (+54 more)
src/math_ann/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetwork_Algorithms.cpp  NeuralNetwork_DataProcessing.cpp  libann.cpp  libann.h
src/math_data/: CMakeLists.txt  DATA.cpp  DATA.h  libdata.cpp  libdata.h
src/math_graph/: CMakeLists.txt  GRAPH.cpp  GRAPH.h  libgraph.cpp  libgraph.h
src/math_linalg/: CMATRIX.cpp  CMATRIX.h  (+21 more)
(+6565 files in other folders)
